# HideAndSeek

./: .gitignore  CLAUDE.md
.beads/: issues.jsonl
design/: CLAUDE.md  README.md  api-surface.md  data-model.md  push-notifications.md
hooks/: openapi-regen.sh  pre-commit  server-checks.sh
ios/: .gitignore  CLAUDE.md  Package.swift  Secrets.xcconfig.template
ios/HideAndSeek/: ContentView.swift  HideAndSeekApp.swift  Info.plist
ios/HideAndSeek.xcodeproj/: project.pbxproj
openapi/: CLAUDE.md  openapi.yaml
server/: .gitignore  CLAUDE.md  pyproject.toml
server/scripts/: generate_openapi.py
server/src/hideandseek/: __init__.py  db.py  dependencies.py  main.py  queries.py
server/src/hideandseek/models/: __init__.py  game.py  game_map.py  location.py  question.py  transit.py  types.py
server/src/hideandseek/routers/: games.py  location.py  maps.py  questions.py
server/src/hideandseek/schemas/: __init__.py  common.py  request.py  response.py
server/tests/: conftest.py  test_games.py  test_location.py  test_main.py  test_maps.py  test_questions.py
