[project]
name = "hideandseek"
version = "0.1.0"
description = "HideAndSeek game server"
authors = [
    { name = "Dan Marchese", email = "dan@marchese.me" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pyyaml>=6.0",
    "sqlmodel>=0.0.33",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
    "pyright>=1.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "FA", "ANN", "DTZ"]
ignore = ["ANN204", "ANN401"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Path", "fastapi.Query", "fastapi.Body", "Depends", "Header", "Path", "Query", "Body"]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["hideandseek"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
